@@ -3,6 +3,14 @@ What's new in Visual PinMAME:
 
 Version 3.2 (X X, 2018) - ""
 ------------------------------------------------------------------------------
+- New (backwards compatible) parameter to allow for mech configuration/specifying an initial position, instead of always loading it from NVRAM
+  Add special "handlemech" modes to Bride of Pinbot (bop_l7)
+  -1: Reset Bride of Pinbot's face to 0 for consistent startup behavior, but then disable internal mech
+  -2: Reset face and continue using internal mech
+
+- Allow window position (x,y) to be less than 0 in cabinet mode, so primary monitor can be put "below" the DMD monitor
+
+- Add additional .raw/non-averaged file output if dumping DMD frames from GTS3 and WPC machines
 
 Version 3.1 (July 29th, 2018) - "Flippin' fast"
 ------------------------------------------------------------------------------
