@@ -1791,7 +1791,7 @@ DRIVER(bdk,240)         //S.A.M.: 11/09 Batman - The Dark Knight - V2.4  (scarec
 DRIVER(bdk,290)         //S.A.M.: 05/10 Batman - The Dark Knight - V2.9  (with 3 ball scarecrow multiball)
 DRIVER(bdk,294)         //S.A.M.: 05/10 Batman - The Dark Knight - V2.94 (back to 2 ball scarecrow multiball)
 #ifdef SAM_INCLUDE_COLORED
-DRIVER(bdk, 294c)         //S.A.M.: 05/10 Batman - The Dark Knight - V2.94 (back to 2 ball scarecrow multiball)
+DRIVER(bdk,294c)        //S.A.M.: 05/10 Batman - The Dark Knight - V2.94 (back to 2 ball scarecrow multiball)
 #endif
 DRIVER(bdk,300)         //S.A.M.: ??/1? Batman - The Dark Knight - V3.00 Home Edition/Costco
 //DRIVER(csi,100)         //S.A.M.: 11/08 CSI: Crime Scene Investigation - V1.00
@@ -2393,6 +2393,7 @@ DRIVER(pool,l7)         //          01/91 B Pool Sharks (LA-7)
 DRIVER(pool,l7c)        //          04/18 B Pool Sharks (LA-7C Competition MOD)
 DRIVER(diner,l1)        //S11-571:  06/90 W Diner (LU-1 Europe)
 DRIVER(diner,l2)        //          06/90 W Diner (LU-2 Europe)
+DRIVER(diner,f2)        //          06/90 W Diner (LF-2 French)
 DRIVER(diner,l3)        //          06/90 W Diner (LA-3)
 DRIVER(diner,l4)        //          09/90 W Diner (LA-4)
 DRIVER(radcl,p3)        //S11-1904: 06/90 B Radical! (P-3)
@@ -2493,6 +2494,7 @@ DRIVER(taf,l4)          //          05/92 B Addams Family, The (L-4)
 DRIVER(taf,d4)          //                  Addams Family, The (D-4) LED Ghost Fix
 DRIVER(taf,l5)          //          12/92 B Addams Family, The (L-5)
 DRIVER(taf,d5)          //                  Addams Family, The (D-5) LED Ghost Fix
+DRIVER(taf,l5c)         //          08/18 B Addams Family, The (L-5C Competition MOD)
 DRIVER(taf,l6)          //          03/93 B Addams Family, The (L-6)
 DRIVER(taf,d6)          //                  Addams Family, The (D-6) LED Ghost Fix
 DRIVER(taf,l7)          //          10/92 B Addams Family, The (L-7) (Prototype L-5)
